# voicebot-local-interface

./: from_mic.py  pyproject.toml
